updates for dstu2 primarily including changes to base resource structure

--- a/implementations/ruby/resources/base/model/lib/formats/export/templates/resource.xml.erb
+++ b/implementations/ruby/resources/base/model/lib/formats/export/templates/resource.xml.erb
@@ -9,3 +9,7 @@
       </contained>
     <%end%>
 <% end %>
+
+<%- if !model.meta().nil? -%><%== render :template => 'resource_resourcemetacomponent', :locals => {name: 'meta', model: model.meta()} %><%- end -%>
+<%- if !model.implicitRules().nil? -%><implicitRules value="<%= model.implicitRules() %>"/><%- end -%>
+<%- if !model.language().nil? -%><language value="<%= model.language() %>"/><%- end -%>
